prover-ray/zkcdriver/testdata/synced/invalid/basic_06.zkc
//error:3:13-14:braces required
fn f(x:u8) -> (r:u8) {
  r = x + x * x
  return
}
